scripts/nullaway/annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8.txt
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/c/TypeDef.java:120: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                if (!argTypes[i].isSubtype(expectedTypeWithGens, null, ctx.method))
                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/c/CodeContext.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.method = method;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/TypeDef.java:86: error: [NullAway] dereferenced expression superGenericDescs is @Nullable
        for (RawType superDesc : superGenericDescs.keySet()) {
                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/ty/ConcreteType.java:41: error: [NullAway] dereferenced expression that.rawType.genericVariances is @Nullable
            switch (that.rawType.genericVariances[i]) {
                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BaseObject.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
            fields = null;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BaseObject.java:20: error: [NullAway] dereferenced expression type.rawType.superGenerics.get(genericOwner) is @Nullable
        return type.rawType.superGenerics.get(genericOwner)[index].toConcrete(type.genericArgs);
                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/c/Project.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
    public static Project singleton = null;
                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/c/Project.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return typeDefs.get(desc);
        ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/c/ty/TypeGenericType.java:15: error: [NullAway] dereferenced expression typeGenericArgs is @Nullable
        return typeGenericArgs[index];
                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/c/ty/MethodGenericType.java:15: error: [NullAway] dereferenced expression methodGenericArgs is @Nullable
        return methodGenericArgs[index];
                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/a/Import.java:10: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.type = type;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/b/Type.java:43: error: [NullAway] dereferenced expression rawTypeDef is @Nullable
        if (genericArgs.length != rawTypeDef.genericParams.length)
                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/parse/MethodDefParser.java:38: error: [NullAway] dereferenced expression resGenConstraints is @Nullable
        p = resGenConstraints.rem;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/parse/exp/ParentheticalExpressionParser.java:23: error: [NullAway] dereferenced expression resExp is @Nullable
        p = resExp.rem;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/parse/misc/GenericConstraintParser.java:36: error: [NullAway] dereferenced expression resType is @Nullable
        p = resType.rem;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/parse/TypeDefParser.java:20: error: [NullAway] dereferenced expression resGenConstraints is @Nullable
        p = resGenConstraints.rem;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/parse/TypeDefParser.java:38: error: [NullAway] dereferenced expression resName is @Nullable
        p = resName.rem;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/b/Project.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
    public static Project singleton = null;
                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BytecodeMethodDef.java:176: error: [NullAway] unboxing of a @Nullable value
                        int fieldIndex = target.type.rawType.virtualFieldTable.get(fieldName);
                                                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BytecodeMethodDef.java:194: error: [NullAway] unboxing of a @Nullable value
                        int fieldIndex = target.type.rawType.virtualFieldTable.get(fieldName);
                                                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BytecodeMethodDef.java:220: error: [NullAway] passing @Nullable parameter 'newGenericArgs' where @NonNull is required
                        m.invoke(stack, sp - numArgs, newGenericArgs);
                                                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BytecodeMethodDef.java:250: error: [NullAway] passing @Nullable parameter 'newGenericArgs' where @NonNull is required
                        impl.invoke(stack, sp - numArgs - 1, newGenericArgs);
                                                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/BytecodeMethodDef.java:250: error: [NullAway] dereferenced expression impl is @Nullable
                        impl.invoke(stack, sp - numArgs - 1, newGenericArgs);
                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeArray.java:23: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(type, null);
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeArray.java:76: error: [NullAway] dereferenced expression implEnumerator is @Nullable
                                implEnumerator.invoke(stack, bp + 1, ConcreteType.NONE);
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeArray.java:84: error: [NullAway] dereferenced expression implTake is @Nullable
                                    implTake.invoke(stack, bp, ConcreteType.NONE);
                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeArray.java:88: error: [NullAway] dereferenced expression implIsEmpty is @Nullable
                                    implIsEmpty.invoke(stack, bp, ConcreteType.NONE);
                                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeArray.java:95: error: [NullAway] dereferenced expression implGet is @Nullable
                                    implGet.invoke(stack, bp, ConcreteType.NONE);
                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeConsole.java:48: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/NormalObject.java:10: error: [NullAway] passing @Nullable parameter 'type' where @NonNull is required
        super(type);
              ^
    (see http://t.uber.com/nullaway )
../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/ty/nf/TypeGenericNonFinalType.java:18: error: [NullAway] dereferenced expression object is @Nullable
        return object.getGenericArg(genericOwner, index);
                     ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urlc8dbc7ce6e_dlubarov_guava_tgz-pJ8-MainJ8/src/d/nat/NativeDouble.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
31 errors
